src/objects/VC_Template__mdt.object
<CustomObject>
    <description>Used for storing Vendor Catalog List</description>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name (Row name)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Priority</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type (header)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vendor Catalog Item</label>
    <pluralLabel>Vendor Catalog Items</pluralLabel>
</CustomObject>